--- a/nx-workspace/apps/client/src/app/navbar-landing-page/navbar-landing-page.component.html
+++ b/nx-workspace/apps/client/src/app/navbar-landing-page/navbar-landing-page.component.html
@@ -1,1 +1,58 @@
-<p>navbar-landing-page works!</p>
+<p-toolbar class="!py-2 md:!py-0">
+  <ng-template #start>
+    <p-button variant="text" severity="warn" routerLink="/">
+      <img
+        src="/assets/Logo.jpg"
+        alt="{{ 'general.logo.alt' | translate }}"
+        class="h-10 w-10 rounded-full object-cover mr-2"
+      />
+      <div class="hidden md:flex flex-col items-center">
+        <h4 class="text-[#e5c76b] text-sm">Plato y Copa</h4>
+        <span class="text-xs text-white dark:text-black">Servicio de meseros</span>
+      </div>
+    </p-button>
+  </ng-template>
+  <ng-template #center>
+    <div class="hidden md:block">
+      <p-tabs value="/">
+        <p-tablist>
+          @for (tab of tabs; track tab.route) {
+            <p-tab
+              [value]="tab.route"
+              [routerLink]="tab.route"
+              class="flex items-center !gap-2 text-inherit"
+            >
+              <i [class]="tab.icon"></i>
+              <span>{{ tab.label }}</span>
+            </p-tab>
+          }
+        </p-tablist>
+      </p-tabs>
+    </div>
+  </ng-template>
+  <ng-template #end>
+    <div class="flex gap-2">
+      <p-button
+        icon="pi pi-search"
+        variant="text"
+        severity="warn"
+        rounded="true"
+        routerLink="/"
+      ></p-button>
+      <p-button
+        label="{{ 'general.quotationBtn' | translate }}"
+        icon="pi pi-calculator"
+        severity="warn"
+        rounded="true"
+        class="hidden md:block"
+      ></p-button>
+      <p-button
+        icon="pi pi-calculator"
+        severity="warn"
+        rounded="true"
+        class="block md:hidden"
+      ></p-button>
+      <p-button icon="pi pi-sun" variant="text" severity="warn" rounded="true"></p-button>
+    </div>
+  </ng-template>
+</p-toolbar>
