--- a/nx-workspace/apps/client/src/app/landing-page/landing-page.component.html
+++ b/nx-workspace/apps/client/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,3 @@
-<app-navbar-landing-page></app-navbar-landing-page>
-<router-outlet></router-outlet>
-<app-downbar-landing-page></app-downbar-landing-page>
+<app-navbar-landing-page />
+<router-outlet />
+<app-downbar-landing-page />
