--- a/nx-workspace/apps/client/src/app/navbar-landing-page/navbar-landing-page.component.html
+++ b/nx-workspace/apps/client/src/app/navbar-landing-page/navbar-landing-page.component.html
@@ -2,13 +2,13 @@
   <ng-template #start>
     <p-button variant="text" severity="warn" routerLink="/">
       <img
-        src="/assets/Logo.jpg"
         alt="{{ 'general.logo.alt' | translate }}"
+        src="/assets/Logo.jpg"
         class="h-10 w-10 rounded-full object-cover mr-2"
       />
       <div class="hidden md:flex flex-col items-center">
         <h4 class="text-[#e5c76b] text-sm">Plato y Copa</h4>
-        <span class="text-xs text-white dark:text-black">Servicio de meseros</span>
+        <span class="text-xs text-black dark:text-white">Servicio de meseros</span>
       </div>
     </p-button>
   </ng-template>
@@ -18,9 +18,9 @@
         <p-tablist>
           @for (tab of tabs; track tab.route) {
             <p-tab
+              class="flex items-center !gap-2 text-inherit"
               [value]="tab.route"
               [routerLink]="tab.route"
-              class="flex items-center !gap-2 text-inherit"
             >
               <i [class]="tab.icon"></i>
               <span>{{ tab.label }}</span>
@@ -38,21 +38,32 @@
         severity="warn"
         rounded="true"
         routerLink="/"
-      ></p-button>
+        tooltipPosition="bottom"
+        [pTooltip]="'general.searchBtn' | translate"
+      />
       <p-button
         label="{{ 'general.quotationBtn' | translate }}"
         icon="pi pi-calculator"
         severity="warn"
         rounded="true"
         class="hidden md:block"
-      ></p-button>
+      />
       <p-button
         icon="pi pi-calculator"
         severity="warn"
         rounded="true"
         class="block md:hidden"
-      ></p-button>
-      <p-button icon="pi pi-sun" variant="text" severity="warn" rounded="true"></p-button>
+        tooltipPosition="bottom"
+        [pTooltip]="'general.quotationBtn' | translate"
+      />
+      <p-button
+        icon="pi pi-sun"
+        variant="text"
+        severity="warn"
+        rounded="true"
+        tooltipPosition="bottom"
+        [pTooltip]="'general.themeChangeBtn' | translate"
+      />
     </div>
   </ng-template>
 </p-toolbar>
