--- a/nx-workspace/apps/client/src/app/downbar-landing-page/downbar-landing-page-menu/downbar-landing-page-menu.component.html
+++ b/nx-workspace/apps/client/src/app/downbar-landing-page/downbar-landing-page-menu/downbar-landing-page-menu.component.html
@@ -1,17 +1,19 @@
 <p-drawer position="right" styleClass="!w-full sm:!w-100" closeable="true" [(visible)]="visible">
   <ng-template #header>
     <div class="flex items-center justify-between px-6 pt-4 shrink-0">
-      <span class="inline-flex items-center gap-2">
+      <p-button variant="text" routerLink="/">
         <img
           alt="{{ 'general.logo.alt' | translate }}"
-          src="/assets/Logo.jpg"
-          class="h-10 w-10 rounded-full object-cover mr-2"
+          ngSrc="/assets/Logo.jpg"
+          width="40"
+          height="40"
+          class="rounded-full object-cover mr-2"
         />
         <div class="flex md:hidden flex-col items-center">
-          <h4 class="text-[#e5c76b] text-sm">Plato y Copa</h4>
+          <h4 class="text-sm">Plato y Copa</h4>
           <span class="text-xs text-black dark:text-white">Servicio de meseros</span>
         </div>
-      </span>
+      </p-button>
     </div>
   </ng-template>
   <p-divider class="!p-0 !m-0" />
@@ -34,12 +36,17 @@
               [routerLink]="option.route === 'services' ? null : option.route"
               [pStyleClass]="option.route === 'services' ? '@next' : undefined"
             >
-              <span class="text-sm font-bold flex gap-3">
-                <i class="text-lg" style="color: #e5c76b !important" [class]="option.icon"></i>
+              <span class="text-sm flex gap-3">
+                <i
+                  class="text-lg"
+                  style="color: var(--p-primary-500) !important"
+                  [class]="option.icon"
+                ></i>
                 {{ option.label }}
               </span>
               @if (option.route === 'services') {
                 <i class="pi pi-chevron-down"></i>
+                <p class="text-primary">Services</p>
               }
             </a>
 
@@ -52,7 +59,11 @@
                     pRipple
                     class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
                   >
-                    <i class="mr-2" style="color: #e5c76b !important" [class]="sv.icon"></i>
+                    <i
+                      class="mr-2"
+                      style="color: var(--p-primary-500) !important"
+                      [class]="sv.icon"
+                    ></i>
                     <span class="font-medium">{{ sv.name }}</span>
                   </a>
                 </li>
@@ -91,7 +102,10 @@
             <div
               pRipple
               class="box rounded p-4 grid grid-cols-1 w-full"
-              style="border: 1px solid #e5c76b; --p-ripple-background: #e5c76b"
+              style="
+                border: 1px solid var(--p-primary-500);
+                --p-ripple-background: var(--p-primary-500);
+              "
             >
               <h4 class="text-bold">{{ co.title }}</h4>
               <span class="text-sm">{{ co.content }}</span>
